syntax.output
状态 32 conflicts: 1 shift/reduce
状态 132 conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifier DecList SEMI

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGNOP Exp

   40 Exp: Exp ASSIGNOP Exp
   41    | Exp AND Exp
   42    | Exp OR Exp
   43    | Exp RELOP Exp
   44    | Exp PLUS Exp
   45    | Exp MINUS Exp
   46    | Exp STAR Exp
   47    | Exp DIV Exp
   48    | LP Exp RP
   49    | MINUS Exp
   50    | NOT Exp
   51    | ID LP Args RP
   52    | ID LP RP
   53    | Exp LB Exp RB
   54    | Exp DOT ID
   55    | ID
   56    | INT
   57    | FLOAT

   58 Args: Exp COMMA Args
   59     | Exp

   60 ExtDef: Specifier error SEMI
   61       | error ExtDecList SEMI

   62 StructSpecifier: STRUCT OptTag LC error RC
   63                | STRUCT error LC error RC

   64 FunDec: ID LP error RP

   65 CompSt: LC error RC

   66 Stmt: error SEMI
   67     | RETURN error SEMI
   68     | IF LP error RP Stmt
   69     | IF LP error RP error ELSE Stmt
   70     | WHILE LP error RP Stmt


Terminals, with rules where they appear

$end (0) 0
error (256) 60 61 62 63 64 65 66 67 68 69 70
SEMI (258) 4 5 7 27 29 35 60 61 66 67
COMMA (259) 9 21 37 58
ASSIGNOP (260) 39 40
RELOP (261) 43
PLUS (262) 44
MINUS (263) 45 49
STAR (264) 46
DIV (265) 47
AND (266) 41
OR (267) 42
DOT (268) 54
NOT (269) 50
TYPE (270) 10
LP (271) 19 20 30 31 32 48 51 52 64 68 69 70
RP (272) 19 20 30 31 32 48 51 52 64 68 69 70
LB (273) 18 53
RB (274) 18 53
LC (275) 12 24 62 63 65
RC (276) 12 24 62 63 65
STRUCT (277) 12 13 62 63
RETURN (278) 29 67
IF (279) 30 31 68 69
ELSE (280) 31 69
WHILE (281) 32 70
ID (282) 15 16 17 19 20 51 52 54 55 64
INT (283) 18 56
FLOAT (284) 57


Nonterminals, with rules where they appear

$accept (30)
    左： 0
Program (31)
    左： 1, 右： 0
ExtDefList (32)
    左： 2 3, 右： 1 2
ExtDef (33)
    左： 4 5 6 7 60 61, 右： 2
ExtDecList (34)
    左： 8 9, 右： 4 9 61
Specifier (35)
    左： 10 11, 右： 4 5 6 7 23 35 60
StructSpecifier (36)
    左： 12 13 62 63, 右： 11
OptTag (37)
    左： 14 15, 右： 12 62
Tag (38)
    左： 16, 右： 13
VarDec (39)
    左： 17 18, 右： 8 9 18 23 38 39
FunDec (40)
    左： 19 20 64, 右： 6 7
VarList (41)
    左： 21 22, 右： 19 21
ParamDec (42)
    左： 23, 右： 21 22
CompSt (43)
    左： 24 65, 右： 6 28
StmtList (44)
    左： 25 26, 右： 24 25
Stmt (45)
    左： 27 28 29 30 31 32 66 67 68 69 70, 右： 25 30 31 32 68
    69 70
DefList (46)
    左： 33 34, 右： 12 24 33
Def (47)
    左： 35, 右： 33
DecList (48)
    左： 36 37, 右： 35 37
Dec (49)
    左： 38 39, 右： 36 37
Exp (50)
    左： 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57, 右：
    27 29 30 31 32 39 40 41 42 43 44 45 46 47 48 49 50 53 54 58 59
Args (51)
    左： 58 59, 右： 51 58


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

   61 ExtDef: error . ExtDecList SEMI

    ID  shift, and go to state 9

    ExtDecList  转到状态 10
    VarDec      转到状态 11


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   62                | STRUCT . OptTag LC error RC
   63                | STRUCT . error LC error RC

    error  shift, and go to state 12
    ID     shift, and go to state 13

    LC  reduce using rule 14 (OptTag)

    OptTag  转到状态 14
    Tag     转到状态 15


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 17
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
   60       | Specifier . error SEMI

    error  shift, and go to state 18
    SEMI   shift, and go to state 19
    ID     shift, and go to state 20

    ExtDecList  转到状态 21
    VarDec      转到状态 11
    FunDec      转到状态 22


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 10

   61 ExtDef: error ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 11

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


State 12

   63 StructSpecifier: STRUCT error . LC error RC

    LC  shift, and go to state 26


State 13

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 14

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   62                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 27


State 15

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  接受


State 17

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 18

   60 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 28


State 19

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 20

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   64       | ID . LP error RP

    LP  shift, and go to state 29

    $default  reduce using rule 17 (VarDec)


State 21

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 30


State 22

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 31
    LC    shift, and go to state 32

    CompSt  转到状态 33


State 23

   61 ExtDef: error ExtDecList SEMI .

    $default  reduce using rule 61 (ExtDef)


State 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 9

    ExtDecList  转到状态 34
    VarDec      转到状态 11


State 25

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 26

   63 StructSpecifier: STRUCT error LC . error RC

    error  shift, and go to state 36


State 27

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   62                | STRUCT OptTag LC . error RC

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 34 (DefList)

    Specifier        转到状态 38
    StructSpecifier  转到状态 8
    DefList          转到状态 39
    Def              转到状态 40


State 28

   60 ExtDef: Specifier error SEMI .

    $default  reduce using rule 60 (ExtDef)


State 29

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   64       | ID LP . error RP

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    RP      shift, and go to state 42
    STRUCT  shift, and go to state 3

    Specifier        转到状态 43
    StructSpecifier  转到状态 8
    VarList          转到状态 44
    ParamDec         转到状态 45


State 30

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 31

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 32

   24 CompSt: LC . DefList StmtList RC
   65       | LC . error RC

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 34 (DefList)]
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)

    Specifier        转到状态 38
    StructSpecifier  转到状态 8
    DefList          转到状态 47
    Def              转到状态 40


State 33

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 34

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 35

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 36

   63 StructSpecifier: STRUCT error LC error . RC

    RC  shift, and go to state 49


State 37

   62 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 50


State 38

   35 Def: Specifier . DecList SEMI

    ID  shift, and go to state 9

    VarDec   转到状态 51
    DecList  转到状态 52
    Dec      转到状态 53


State 39

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 54


State 40

   33 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 38
    StructSpecifier  转到状态 8
    DefList          转到状态 55
    Def              转到状态 40


State 41

   64 FunDec: ID LP error . RP

    RP  shift, and go to state 56


State 42

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 43

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 9

    VarDec  转到状态 57


State 44

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 58


State 45

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 59

    $default  reduce using rule 22 (VarList)


State 46

   65 CompSt: LC error . RC

    RC  shift, and go to state 60


State 47

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 32
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    ID      shift, and go to state 68
    INT     shift, and go to state 69
    FLOAT   shift, and go to state 70

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 71
    StmtList  转到状态 72
    Stmt      转到状态 73
    Exp       转到状态 74


State 48

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 49

   63 StructSpecifier: STRUCT error LC error RC .

    $default  reduce using rule 63 (StructSpecifier)


State 50

   62 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 62 (StructSpecifier)


State 51

   18 VarDec: VarDec . LB INT RB
   38 Dec: VarDec .
   39    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 25

    $default  reduce using rule 38 (Dec)


State 52

   35 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 76


State 53

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 36 (DecList)


State 54

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 55

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


State 56

   64 FunDec: ID LP error RP .

    $default  reduce using rule 64 (FunDec)


State 57

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 23 (ParamDec)


State 58

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 59

   21 VarList: ParamDec COMMA . VarList
